--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.9.0",
     "mongoose-autopopulate": "^0.17.1",
     "multer": "^1.4.5-lts.1",
